    * 3149 FIX: fixed rare crash if alert handling tried to long non-latin characters
    * 3843 FIX: Fixed reporting of crashes when using Nagios core
    * 3846 FIX: Nagios: define_contactgroups = False is handled correctly again
    * 3852 FIX: Host related files are now deleted during host deletion...
    * 3737 FIX: Fixed slow activation of changes due to loss of IP address cache...

    Checks & Agents:
    * 3183 aruba_wlc_aps: new check which monitors the provisioned accesspoints of an Aruba Network WLAN Controller
    * 3184 varnish, varnish.backend, varnish.backend_success_ratio, varnish.cache, varnish.cache_hit_ratio, varnish.client, varnish.esi, varnish.fetch, varnish.objects, varnish.worker, varnish.worker_thread_ratio: new checks which monitor HTTP Accelerator Statistics via varnishstat on Linux
    * 2994 brocade.temp: increased temperature default levels from 35/40 to 55/60
    * 3078 mssql_transactionlogs: new check to monitor the size of mssql transaction logs
    * 2995 esx_vsphere_licenses: now compatible with esx 6.0...
    * 2996 websphere_mq_queues: now able to configure levels for used percentage of total queues
    * 3190 entity_sensors, entity_sensors.fan: new checks monitoring temperature and fan sensors of devices such as Palo Alto Networks which support the ENTITY-SENSORS-MIB
    * 3081 mk_jolokia: plugin now supports setting custom CAs for verifying server certificate as well as sending a client certificate...
    * 3191 cisco_redundancy: new check which monitors the status of the redundant unit of Cisco devices supporting the CISCO-RF-MIB
    * 3083 mk_jolokia: The plugin can now be configured with a service url to treat the jolokia server as a jmx proxy
    * 3085 fortigate_signatures: new check to monitor av and ips signatures on fortigate firewalls...
    * 3257 dell_idrac_virtdisks: new check which monitors the virtual disks of a Dell IDrac Device
    * 3001 fileinfo: now able to configure the checks status if the file is missing