@@ -1,0 +1,12 @@
+Title: Predictive levels: Improved handling of broken prediction files (empty files)
+Level: 1
+Component: core
+Compatible: compat
+Version: 1.4.0i1
+Date: 1475061250
+Class: fix
+
+In previous versions it could happen that the predictive levels feature created empty
+(zero byte sized) files below var/check_mk/prediction which made the predictive levels
+not work anymore for the affected service. This situation is now being repaired
+automatically.
