@@ -31,6 +31,7 @@
     * 3846 FIX: Nagios: define_contactgroups = False is handled correctly again
     * 3852 FIX: Host related files are now deleted during host deletion...
     * 3737 FIX: Fixed slow activation of changes due to loss of IP address cache...
+    * 3893 FIX: Predictive levels: Improved handling of broken prediction files (empty files)...
 
     Checks & Agents:
     * 3183 aruba_wlc_aps: new check which monitors the provisioned accesspoints of an Aruba Network WLAN Controller
